# codesense-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  start.sh
backend/: Makefile  alembic.ini  pyproject.toml  run.py  uv.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: ai_models.py  auth.py  dashboard.py  merge_requests.py  prompt_templates.py  reviews.py  scheduler.py  sync.py  template_standard.py  webhook.py
backend/app/api/stats/: __init__.py  basic.py  efficiency.py  project.py  quality.py  router.py  token.py  user.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/libs/: __init__.py
backend/app/libs/ai_models/: __init__.py
backend/app/libs/file_filter/: __init__.py  base.py  default.py  factory.py  language.py
backend/app/libs/gitlabx/: __init__.py  client.py  exceptions.py  models.py
backend/app/libs/gitx/: __init__.py  client.py  exceptions.py  models.py
backend/app/models/: __init__.py  ai_model.py  merge_request.py  project.py  prompt_template.py  review.py
backend/app/schemas/: __init__.py  ai_model.py  auth.py  merge_request.py  project.py  prompt_template.py  review.py  statistics.py
backend/app/scripts/ai_models/: __init__.py  init_ai_models.py
backend/app/scripts/templates/: __init__.py  create_default_review_template.py
backend/app/services/: __init__.py  scheduler_service.py
backend/app/services/ai/: __init__.py  ai_service.py  prompt_optimizer.py  template_generator.py
backend/config/: config.example.yaml
frontend/: .gitignore  (+8 more)
(+67 files in other folders)
