[project]
name = "code-reviewer"
version = "0.1.0"
description = "GitLab代码审查系统"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pymysql>=1.1.2",
    "greenlet>=3.0.0",
    "pydantic>=2.5.0",
    "asyncmy ~=0.2.10",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "python-gitlab>=4.0.0",
    "GitPython>=3.1.40",
    "loguru>=0.7.0",
    "resend>=2.13.1",
    "arrow>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
strict = true
